Fix #32199: Smooth Vertex no longer has X, Y and Z options.